--- a/sass/mm-theme/pages/_page.scss
+++ b/sass/mm-theme/pages/_page.scss
@@ -16,6 +16,8 @@
 .mm-content {
   p > img {
     object-fit: cover;
+    width: 100%;
+    height: auto;
   }
 
   hr {
@@ -82,7 +84,12 @@
     text-align: center;
     display: inline-flex;
     margin-top: 8px;
+    width: 100%;
 
+    @include desktop {
+      width: auto;
+    }
+    
     a {
       @extend .btn-general;
     }
@@ -173,6 +180,7 @@
       text-decoration: none;
       color: var(--dark-blue);
       font-weight: var(--bold);
+      line-height: 2.8rem;
 
       @include desktop {
         font-size: 1.9rem;
