--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -20,25 +20,25 @@ h6 {
 h1 {
   font-size: 2rem;
   line-height: 1.2;
-  font-weight: var(--black);
-  color: var(--dark-blue);
+  font-weight: $black;
+  color: $dark-blue;
 }
 h2 {
   font-size: 1.8rem;
   line-height: 1.25;
-  font-weight: var(--black);
-  color: var(--blue);
+  font-weight: $black;
+  color: $blue;
 }
 h3 {
   font-size: 1.7rem;
   line-height: 1.3;
-  font-weight: var(--black);
-  color: var(--blue);
+  font-weight: $black;
+  color: $blue;
 }
 h4 {
   font-size: 1.6rem;
   line-height: 1.35;
-  font-weight: var(--extra-bold);
+  font-weight: $extra-bold;
   color: #fff;
 }
 h5 {
@@ -53,8 +53,8 @@ h6 {
 p,
 pre {
   margin: 0;
-  color: var(--paragraph-text);
-  font-weight: var(--regular);
+  color: $paragraph-text;
+  font-weight: $regular;
   font-size: 1.5rem;
 }
 
@@ -94,8 +94,8 @@ a {
 blockquote,
 blockquote p {
   margin: 0;
-  color: var(--paragraph-text);
-  font-weight: var(--medium);
+  color: $paragraph-text;
+  font-weight: $medium;
   font-size: 1.6rem;
   line-height: 24px;
   letter-spacing: 0;
@@ -104,7 +104,7 @@ blockquote p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: var(--dark-blue);
+  color: $dark-blue;
   text-decoration: none;
 }
 
