--- a/sass/mm-theme/pages/_tpl-search.scss
+++ b/sass/mm-theme/pages/_tpl-search.scss
@@ -11,7 +11,7 @@
     margin-top: 32px;
 
     h4 {
-      color: var(--dark-blue);
+      color: $dark-blue;
       margin-bottom: 24px;
     }
     &__content {      
@@ -30,6 +30,6 @@
   .search-results {
     margin-top: 56px;
     padding-top: 56px;
-    border-top: 3px solid var(--dark-blue);
+    border-top: 3px solid $dark-blue;
   }
 }
