--- a/sass/mm-theme/mixins/_headers.scss
+++ b/sass/mm-theme/mixins/_headers.scss
@@ -10,7 +10,7 @@
   color: #fff;
   text-shadow: 0 1px 3px #589429;
   font-size: 1.6rem;
-  font-weight: var(--black);
+  font-weight: $black;
   box-shadow: none;
   background-color: transparent;
 
@@ -28,17 +28,17 @@
 
 %search-bar {
   background: #ffffff;
-  border: 1px solid var(--dark-blue);
+  border: 1px solid $dark-blue;
   border-radius: 25px;
-  font-weight: var(--extra-bold);
+  font-weight: $extra-bold;
   font-size: 1.5rem;
-  color: var(--blue);
+  color: $blue;
   margin-right: 8px;
   width: 100%;
   height: 100%;
 
   &::placeholder {
-    color: var(--blue);
+    color: $blue;
   }
 }
 
@@ -48,7 +48,7 @@
 }
 
 .search-icon {
-  color: var(--dark-blue);
+  color: $dark-blue;
   font-size: 2rem;
 
   &:hover {
@@ -67,7 +67,7 @@
     z-index: 1;
 
     &:before {
-      border-top: 2px solid var(--dark-blue);
+      border-top: 2px solid $dark-blue;
       content: "";
       margin: 0 auto;
       position: absolute;
