--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -53,7 +53,7 @@ h6 {
 p,
 pre {
   margin: 0;
-  color: $paragraph-text;
+  color: $dark-gray;
   font-weight: $regular;
   font-size: 1.5rem;
 }
@@ -94,7 +94,7 @@ a {
 blockquote,
 blockquote p {
   margin: 0;
-  color: $paragraph-text;
+  color: $dark-gray;
   font-weight: $medium;
   font-size: 1.6rem;
   line-height: 24px;
