--- a/sass/mm-theme/base/_banner.scss
+++ b/sass/mm-theme/base/_banner.scss
@@ -55,6 +55,19 @@
         line-height: 44px;
         padding-right: 12%;
       }
+      @media (max-height: 700px) {
+        h1 {
+          font-size: 2.5rem;
+        }
+
+        button {
+          font-size: 1.25rem;
+        }
+      }
+
+      @media (max-height: 600px) and (min-width: 1000px) {
+        display: none;
+      }
     }
   }
 
@@ -64,6 +77,7 @@
     img {
       object-fit: cover;
       height: 50vw;
+      width: 100%;
     }
 
     .mobile-hero-content {
