feature: add mobile footer banner

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,6 +115,7 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 --------------------------------------------------------------*/
 // @import 'mm-theme/template-parts/content-page';
 @import 'mm-theme/template-parts/banner-covid19';
+@import 'mm-theme/template-parts/banner-website-moved';
 
 /*--------------------------------------------------------------
 # Footer
