--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -6835,6 +6835,91 @@ div.wpcf7-mail-sent-ok {
     line-height: 24px; }
 
 /*--------------------------------------------------------------
+# Banner Website Moved
+--------------------------------------------------------------*/
+.fixed-banner {
+  background: #fcfcfc;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
+  padding-top: 0 !important;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2); }
+
+.website-moved {
+  min-height: 160px;
+  z-index: 99; }
+  .website-moved .dismiss {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0; }
+    .website-moved .dismiss__text {
+      color: #fff;
+      font-size: 1.6rem;
+      font-weight: 700;
+      letter-spacing: 0;
+      line-height: 20px;
+      text-align: right;
+      text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+      margin-right: 8px; }
+    .website-moved .dismiss__icon {
+      color: #fff;
+      text-shadow: 0 0 3px rgba(0, 0, 0, 0.5); }
+  .website-moved .we-moved {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 7px 7px 0 0;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3);
+    padding: 16px 20px; }
+    .website-moved .we-moved a {
+      width: 100%;
+      max-width: 450px; }
+    .website-moved .we-moved__logo {
+      width: 160px;
+      height: auto; }
+    .website-moved .we-moved__content {
+      margin: 24px 0; }
+    .website-moved .we-moved__title {
+      color: #003867;
+      font-family: Georgia, serif;
+      font-weight: 300;
+      font-size: 2.6rem;
+      letter-spacing: 0;
+      line-height: 30px;
+      text-align: center;
+      margin-bottom: 5px; }
+    .website-moved .we-moved__text {
+      color: #000;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.2rem;
+      letter-spacing: 0;
+      line-height: 18px;
+      text-align: center;
+      padding: 0 15px;
+      max-width: 420px; }
+    @media (min-width: 1000px) {
+      .website-moved .we-moved {
+        flex-direction: row;
+        justify-content: space-around;
+        height: 120px;
+        padding: 0 24px; }
+        .website-moved .we-moved__content {
+          margin: 24px 0;
+          max-width: 450px; }
+        .website-moved .we-moved a {
+          width: auto; } }
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
