--- a/sass/mm-theme/template-parts/_banner-website-moved.scss
+++ b/sass/mm-theme/template-parts/_banner-website-moved.scss
@@ -18,18 +18,18 @@
 }
 
 .website-moved {
-  min-height: 260px;
+  min-height: 160px;
+  z-index: 99;
 
   .dismiss {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    // height: 40px;
     padding: 10px 0;
 
     &__text {
-      color: #ffffff;
+      color: #fff;
       font-size: 1.6rem;
       font-weight: $bold;
       letter-spacing: 0;
@@ -40,7 +40,7 @@
     }
 
     &__icon {
-      color: #ffffff;
+      color: #fff;
       text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
     }
   }
@@ -54,17 +54,20 @@
     background-color: #fff;
     border-radius: 7px 7px 0 0;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3);
-    min-height: 320px;
-    height: 100%;
-    padding: 0 20px;
+    padding: 16px 20px;
 
     a {
       width: 100%;
+      max-width: 450px;
     }
 
     &__logo {
       width: 160px;
       height: auto;
+    }
+
+    &__content {
+      margin: 24px 0;
     }
 
     &__title {
@@ -75,17 +78,34 @@
       letter-spacing: 0;
       line-height: 30px;
       text-align: center;
-      margin-bottom: 14px;
+      margin-bottom: 5px;
     }
 
     &__text {
-      color: #000000;
+      color: #000;
       font-family: Arial, Helvetica, sans-serif;
       font-size: 1.2rem;
       letter-spacing: 0;
       line-height: 18px;
       text-align: center;
       padding: 0 15px;
+      max-width: 420px;
+    }
+
+    @include desktop {
+      flex-direction: row;
+      justify-content: space-around;
+      height: 120px;
+      padding: 0 24px;
+
+      &__content {
+        margin: 24px 0;
+        max-width: 450px;
+      }
+
+      a {
+        width: auto;
+      }
     }
   }
 }
