--- a/sass/mm-theme/template-parts/_banner-website-moved.scss
+++ b/sass/mm-theme/template-parts/_banner-website-moved.scss
@@ -2,19 +2,14 @@
 # Banner Website Moved
 --------------------------------------------------------------*/
 
-.fixed-banner {
+#toast {
   background: #fcfcfc;
   width: 100%;
   position: fixed;
-  // top: 75%;
   bottom: 0;
-  z-index: 1;
-  padding-top: 0 !important;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
+  z-index: 99;
   box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.2);
+  display: none;
 }
 
 .website-moved {
@@ -27,6 +22,10 @@
     justify-content: center;
     align-items: center;
     padding: 10px 0;
+
+    &:hover {
+      cursor: pointer;
+    }
 
     &__text {
       color: #fff;
