feature: add ie banner

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -6918,6 +6918,39 @@ div.wpcf7-mail-sent-ok {
           width: auto; } }
 
 /*--------------------------------------------------------------
+# Banner IE
+--------------------------------------------------------------*/
+.ie-banner {
+  background-color: #333333;
+  padding: 22px 0;
+  display: none; }
+  @media (max-width: 1000px) {
+    .ie-banner {
+      display: none; } }
+  .ie-banner .container {
+    justify-content: center;
+    align-items: center;
+    display: flex; }
+  .ie-banner h2,
+  .ie-banner p,
+  .ie-banner span {
+    color: #fff; }
+  .ie-banner h2 {
+    font-weight: 400;
+    margin-bottom: 8px; }
+  .ie-banner p {
+    font-size: 1.6rem; }
+  .ie-banner .browsers {
+    display: flex;
+    justify-content: space-around; }
+  .ie-banner .browser-logo {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    text-align: center; }
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
