--- a/sass/style.scss
+++ b/sass/style.scss
@@ -116,6 +116,7 @@ $fa-font-path: "fonts/fontawesome/webfonts";
 // @import 'mm-theme/template-parts/content-page';
 @import 'mm-theme/template-parts/banner-covid19';
 @import 'mm-theme/template-parts/banner-website-moved';
+@import 'mm-theme/template-parts/banner-ie';
 
 /*--------------------------------------------------------------
 # Footer
